deployment-geoserver/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: geoserver-instance-test
spec:
  serviceName: geoserver-instance-test
  replicas: 1
  selector:
    matchLabels:
      app: geoserver-instance-test
  template:
    metadata:
      labels:
        app: geoserver-instance-test
    spec:
      containers:
        - name: geoserver
          image: kartoza/geoserver:2.25.0
          imagePullPolicy: Always
          volumeMounts:
            - name: geoserver-data-dir
              mountPath: /opt/geoserver/data_dir
            - name: geowebcache-cache-dir
              mountPath: /opt/geoserver/data_dir/gwc
          resources:
            requests:
              memory: "1Gi"
              cpu: "100m"
            limits:
              memory: "2Gi"
              cpu: "200m"
      volumes:
        - name: geoserver-data-dir
          persistentVolumeClaim:
            claimName: geoserver-data-dir-pvc-test
        - name: geowebcache-cache-dir
          persistentVolumeClaim:
            claimName: geowebcache-cache-dir-pvc-test
