deployment-geoserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geoserver-instance
spec:
  tls: # https = http + tls -> couche de confidentialité, client et serveur ne parlent pas en clair mais definissent un tunnel de confidentialité dans lequel ils sont les seuls à comprendre le contenu
    - hosts:
        - geoserver-de-fifou2.kub.sspcloud.fr
  rules:
  - host:  geoserver-de-fifou2.kub.sspcloud.fr

    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: # c'est bien le nom du service
            name: geoserver-instance
            port:
              number: 8080
